Add CurrencyComboBox component and check icon; update resource files

--- a/resources.qrc
+++ b/resources.qrc
@@ -21,5 +21,6 @@
         <file>icons/delete_forever.svg</file>
         <file>icons/edit.svg</file>
         <file>icons/remove.svg</file>
+        <file>icons/check.svg</file>
     </qresource>
 </RCC>
